--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-xterm",
+  "name": "react-xterm-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,13 +7,21 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^24.9.1",
+    "@types/lodash.throttle": "^4.1.6",
     "@types/node": "^12.12.35",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
+    "chai": "^4.2.0",
+    "express-ws": "^4.0.0",
+    "lodash.throttle": "^4.1.1",
+    "node-pty": "^0.9.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
-    "typescript": "^3.7.5"
+    "react-xterm": "^2.0.4",
+    "typescript": "^3.7.5",
+    "xterm": "^4.5.0",
+    "xterm-addon-web-links": "^0.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
